--- a/welded_knots_Ig_and_arrow_diagrams.tex
+++ b/welded_knots_Ig_and_arrow_diagrams.tex
@@ -1,7 +1,7 @@
 \chapter{Welded knots, isometry Lie algebras and arrow diagrams}
 \label{ch:welded-knots-isometry-lie-algebras-and-arrow-diagrams}
 
-Welded knots, or \(w\)-knots are a diagrammatic generalisation of knots that relate to codimension two knotted objects in \(\mathbb{R}^{4}\), rather than \(\mathbb{R}^{3}\).
+\lettrine{\libertineInitialGlyph{W}}{elded} knots, or \(w\)-knots are a diagrammatic generalisation of knots that relate to codimension two knotted objects in \(\mathbb{R}^{4}\), rather than \(\mathbb{R}^{3}\).
 
 Generalisations of the Vassiliev invariants to objects other than knotted circles in \(\mathbb{R}^{3}\) take the name \textbf{finite type invariants}. On one hand, welded knots are more complicated topological objects, relating to ribbon embeddings of tori in four dimensions. On the other hand however their finite type invariant theory is much more manageable than the classical case, so studying the simpler, welded version of \(\mathcal{A}\) may shed light on how to study the algebra \(\mathcal{A}\).
 
