--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -2,4 +2,10 @@
 \addcontentsline{toc}{section}{\textit{Acknowledgements}}
 \markboth{\textit{Acknowledgements}}{\textit{Acknowledgements}}
 
-Thanks to ...
+My sincere thanks go to my advisor, Zsuzsanna Dancso for two years of sage advice, patient guidance, and inspiring encouragement on both mathematical and professional matters. Further thanks for fostering an encouraging and wholesome group environment, and to the members of that group for their support and company.
+
+Some conversations with members of the mathematical community I am particularly grateful for, particularly those with Dror Bar-Natan, Edmund Heng, Tamara Hogan, Thorsten Hertl and Anderson Vera who gave insightful answers to my questions. Thanks also to many office mates for various mathematical discussions: Nelson Odins-Jones, Lewis Combes and Max Mikkelsen, Nick Bridger, Tao Qin and Jensen O'Sullivan. Special thanks to Max Mikkelsen for proofreading a significant portion of a draft of this document and providing a great deal of typographical and editorial suggestions from a perspective outside this field.
+
+Thanks to the School of Mathematics and Statistics ICT support team for maintaining the machines which ran some of the computations in this thesis, and to the developers of Inkscape, VimTeX and Sagemath for creating excellent free software I used to write this thesis.
+
+Finally, thanks to my friends for helping me maintain my sanity these last two years.
