Some small tweaks

--- a/introduction.tex
+++ b/introduction.tex
@@ -3,9 +3,9 @@
 \markboth{\textit{Introduction}}{\textit{Introduction}}
 
 
-\lettrine{\libertineInitialGlyph{T}}{here} is a satisfyingly simple general method for defining invariants of topological objects due to Thom, Arnold and Vassiliev. In broad strokes, it is to study these topological objects alongside their singular versions. For example, the space of immersions \(S^{1} \to \mathbb{R}^{3}\) contains knots (ambient isotopy classes of embeddings), but also proper immersions that have one or more intersection points in \(\mathbb{R}^{3}\) and fail to be knots. This space of so-called singular knots is of codimension one within the space of immersions, and excluding it divides the space of immersions into connected components which are exactly the knots. Inside the space of immersions with one or more intersection points lies the codimension one space of immersions with two or more intersection points, and it divides up the space of one-singular-point immersions (which is codimension two inside the space of all immersions).
+\lettrine{\libertineInitialGlyph{T}}{here} is a satisfyingly simple general method for defining invariants of topological objects due to Thom, Arnold and Vassiliev. In broad strokes, the study of topological objects should take into account not only the objects, but also how they exist alongside their singular versions. The example of this thesis is that of topological knots: the space of immersions \(S^{1} \to \mathbb{R}^{3}\) contains knots (the embeddings), but also proper immersions that have one or more intersection points in \(\mathbb{R}^{3}\) and fail to be knots. The singular knots form a space of codimension one within the space of immersions; taking its complement divides the space of immersions into connected components which are exactly the knots. Similarly, inside the space of immersions with one or more intersection points lies the codimension one space of immersions with two or more intersection points, and it again divides up the space of one-singular-point immersions into connected components.
 
-This can be continued, dividing the infinite-dimensional space of immersions into what is called the \textbf{stratification of the space of knots}. This includes the space of knots in the zeroth level of the strata, but it also includes all of the singular knots, and takes into account how the singular knots separate the space of knots. A rough schematic illustration might look like
+This continues, dividing the infinite-dimensional space of immersions into what is called the \textbf{stratification of the space of knots}. This includes the space of knots in the zeroth level of the strata, but it also includes all of the singular knots, and takes into account how the singular knots separate the space of knots. A rough schematic illustration of the strata might look like
 \[
 	\includegraphics[width=0.5\textwidth, valign=c]{graphics/stratification.pdf}
 \]
