--- a/lie_theory_and_jacobi_diagrams.tex
+++ b/lie_theory_and_jacobi_diagrams.tex
@@ -1211,7 +1211,7 @@ Recall that the goal is an algebra isomorphic to \(\mathcal{A}\). The first step
 
 Composition in operads is something like contraction in a symmetric monoidal category, but with restictions on what can be contracted: only outputs with inputs. Furthermore, in an operad, no object has two outputs, for example there is no natural notion of tensor product in an operad.
 
-A step towards describing the internal structure of \(\mathcal{A}\) without specifying a Lie algebra is to allow multiple outputs, thereby considering not just operations but, for example in \(\mathcal{C} = \mathbf{Vect}\), general multilinear functions. Operads were abstractions of the operations on some object (say, \(A\)), i.e. morphisms \(A^{\otimes n} \to A\). Props will be abstractions of all maps \(A^{\otimes n} \to A^{\otimes m}\).
+A step towards describing the internal structure of \(\mathcal{A}\) without specifying a Lie algebra is to allow multiple outputs, thereby considering not just operations but, for example in \(\mathcal{C} = \mathbf{Vect}\), general multilinear functions. Operads were abstractions of the operations on some object (say, \(A\)), i.e. morphisms \(A^{\otimes n} \to A\). Slightly more generally, props are abstractions of all maps \(A^{\otimes n} \to A^{\otimes m}\).
 
 \begin{definition}
 	\label{def:prop}
